about me - fix visual bug where header overlapped with page header

--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -1,4 +1,5 @@
 .about {
+    padding-top: 100px;
     background-color: var(--surface-color);
 
     &__container {
